Added mongoose to do basic db operations
Made a mongoose model for a "Todo". Used that model to create an instance of a Todo.
Set "mongoose.Promise = global.Promise" to use promises instead of callbacks.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Roberts",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.30"
+    "mongodb": "^2.2.30",
+    "mongoose": "^4.11.5"
   }
 }
