--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-todo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
@@ -15,10 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.5"
+    "mongoose": "^4.11.5",
+    "validator": "^8.0.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
